--- a/public_html/html_project/home.css
+++ b/public_html/html_project/home.css
@@ -1,8 +1,8 @@
-#header {
+main {
 	text-align: center;
 }
 
-#header h1 {
+h1 {
 	font-size: 4rem;
 }
 
@@ -43,7 +43,7 @@
 	color: white;
 	position: absolute;
 	z-index: 0;
-	top: 44.5%;
+	top: 41%;
 	left: 0;
 	right: 0;
 	margin-left: auto;
@@ -94,7 +94,7 @@ li {
 }
 
 @media screen and (max-width: 800px) {
-	#header h1 {
+	h1 {
 		font-size: 2rem;
 	}
 }
