--- a/public_html/html_project/effects.css
+++ b/public_html/html_project/effects.css
@@ -2,11 +2,12 @@
 	text-align: center;
 }
 
-#header .emphasis {
+#header .emphasis_header {
 	font-size: 2.5rem;
 	text-align: center;
 	font-style: italic;
 	text-decoration: underline;
+	color: rgb(182, 0, 0);
 }
 
 h1 {
@@ -66,7 +67,32 @@ table {
 #submit {
 	font-size: 1rem;
 	border: 1px solid black;
-	background-color: rgb(249, 255, 253);
+	background-color: rgb(215, 250, 238);
 	padding: 10px;
 	border-radius: 10px;
+}
+
+#effects_image {
+	max-width: 600px;
+	width: 60%;
+}
+
+#effects_parent {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+#quote {
+	width: 35%;
+}
+
+@media screen and (max-width: 850px) {
+	#effects_parent {
+		display: flex;
+		flex-direction: column;
+	}
+	#quote {
+		width: 100%;
+	}
 }
